release.

Unreleased
----------

Added
~~~~~

 * Added a noise gate.
 * Added tunneling audio through TCP if UDP connection goes down.
 * --version now includes the current commit hash.
 * Server passwords. Thanks @rbran!
 * Added support for sending and receiving text messages
 * Invalid server certificates are now rejected by default and need to be
   explicitly allowed either per server or globally.

Changed
~~~~~~~

* Changed how you mute yourself/others. See man pages for details on the new options.

// Removed
// ~~~~~~~

Fixed
~~~~~

 * Client no longer sends empty audio packets.
 * Informative error message instead of panic when a running mumd-process can't
   be found.
 * Lots of other minor informative error messages instead of panics.
 * Status requests are sent in parallel.

Other
~~~~~

 * Updated to tokio 1.0.
 * Cleaned up dependencies

0.3.1 - 2021-04-08
------------------

Fixed
~~~~~

 * Compilation no longer fails with "module export is private".

0.3.0 - 2020-12-25
------------------

Added
~~~~~

 * Published to crates.io. You can now install with +cargo install {mumctl,mumd}+!
 * Support for macOS.
 * Notifications via libnotify (behind a feature-gate).
 * List configured servers, if they're online and how many users are
   connected with +mumctl status+.
 * Configure your own outgoing volume and others' ingoing volume with +mumctl config+.
 * Mute/deafen yourself with +mumctl {mute,deafen}+.
 * Locally mute others with +mumctl user <user> mute+.
 * Sound effects.
 * Short about-texts when using +--help+.
 * Man pages.

Changed
~~~~~~~

 * Connecting and disconnecting from servers is now done with +mumctl
   {connect,disconnect}+ instead of under the +server+ subcommand.

Fixed
~~~~~

 * Starting an instance of mumd while another is already running now requires
   the old instance to be shut down so instances aren't left running and
   unreachable.

Other
~~~~~

 * Moved to dasp, a pure Rust digital audio signal processing library.
