@@ -23,7 +23,8 @@ Added
  * Server passwords. Thanks @rbran!
  * Added support for sending and receiving text messages
  * Invalid server certificates are now rejected by default and need to be
-   explicitly allowed either per server or globally.
+   explicitly allowed either when connecting or permanently per server or
+   globally.
 
 Changed
 ~~~~~~~
